@@ -64,6 +64,9 @@ curseofwar \- Real Time Strategy Game for Linux
 .I shape
 ]
 [
+.B \-T
+]
+[
 .B \-W
 .I width
 ]
@@ -121,6 +124,9 @@ Game speed from the slowest to the fastest (default is normal).
 .TP
 \fB\-S\fR [rhombus|rect|hex]
 Map shape (rectangle is default). Max number of countries N=4 for rhombus and rectangle, and N=6 for the hexagon.
+.TP
+\fB\-T\fR 
+Show the timeline.
 .TP
 \fB\-W\fR \fIwidth\fR
 Map width (default is 21, maximum is 40)
